--- a/src/main/resources/static/radiotracers.html
+++ b/src/main/resources/static/radiotracers.html
@@ -211,12 +211,12 @@
                         </tr>
                     </table>
                     <div class="text-right">
-                        <label onclick="emptyFieldsOfAddModal()" data-backdrop="static"
+                        <label data-backdrop="static"
                                data-keyboard="false" data-toggle="modal"
                                data-target="#bs-example-modal-sm-add-new-radio-tracer"
                                style="cursor:pointer;"
                                onmouseover="this.style.color='#2f2f8b';"
-                               onmouseout="this.style.color='';"> <i class="fa fa-plus-circle"></i>&nbsp;Add Radiotracer</label>
+                               onmouseout="this.style.color='';" onclick="emptyFieldsOfAddModal()" > <i class="fa fa-plus-circle"></i>&nbsp;Add Radiotracer</label>
                     </div>
                 </div>
             </div>
