--- a/src/main/resources/static/cameras.html
+++ b/src/main/resources/static/cameras.html
@@ -238,10 +238,7 @@
                             <th id="THBathroomDescription" class="text-center" style="vertical-align: middle">A must
                                 have in your house.
                             </th>
-                            <th id="THBathroomFacilities" class="text-center" style="vertical-align: middle">Will see
-                                about this. Maybe check boxes for
-                                user to select
-                                therapies in this room
+                            <th id="THBathroomFacilities" class="text-center" style="vertical-align: middle">Will see about this. Maybe check boxes for user to select therapies in this room
                             </th>
                             <th id="THBathroomEdit" class="text-center" style="vertical-align: middle"><u
                                     id="uBathroomEdit" class="fa fa-pencil-square-o" style="cursor:pointer;"
@@ -253,9 +250,7 @@
                     </table>
                     <div class="text-right">
 
-                        <label data-backdrop="static"
-                               data-keyboard="false" data-toggle="modal"
-                               data-target="#bs-example-modal-sm-add-new-camera"
+                        <label id="mata"
                                style="cursor:pointer;"
                                onmouseover="this.style.color='#2f2f8b';"
                                onmouseout="this.style.color='';"
@@ -361,6 +356,7 @@
 
 <!-- Own Script -->
 <script src="/js/cameras.js"></script>
+
 </body>
 
 </html>
