--- a/src/main/resources/static/activity.html
+++ b/src/main/resources/static/activity.html
@@ -177,7 +177,7 @@
                     <a href="cameras.html"><i class="fa fa-fw fa-camera"></i> Cameras</a>
                 </li>
                 <li>
-                    <a href="therapies.html"><i class="fa fa-fw fa-pencil-square-o"></i> Therapies</a>
+                    <a href="Therapies.html"><i class="fa fa-fw fa-pencil-square-o"></i> Therapies</a>
                 </li>
                 <li>
                     <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-cog"></i> Users <i class="fa fa-fw fa-caret-down"></i></a>
