--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -10,80 +10,11 @@
     <meta name="author" content="">
 
     <title>NHS Nuclear Medicine Booking System</title>
-    <link rel="stylesheet" href="/css/jquery-ui.css" />
-    <script type = "text/javascript" src = "/js/jquery-2.1.3.min.js"></script>
+    <link rel="stylesheet" href="/css/jquery-ui.css"/>
+    <script type="text/javascript" src="/js/jquery-2.1.3.min.js"></script>
     <script src="/js/jquery.min.js"></script>
-    <script type=text/javascript src = "/js/jquery-1.9.1.js"></script>
-    <script type=text/javascript src = "/js/jquery-ui.js"></script>
-
-    <script type = text/javascript>
-        $(function() {
-            $( "#DOB" ).datepicker();
-        });
-
-        $(document).ready(function(){
-            $('#addNew').on('click',addNewRow);
-        });
-
-
-        $(document).ready(function() {
-            $("#deletePatients").click(function () {
-                $("table input[type ='checkbox']:checked").parent().parent().remove();
-
-            });
-
-
-            $('#searchPatient').keyup(function () {
-                var data = this.value.split(" ");
-                var rows = $(".patientInfo tbody tr").hide();
-                if(this.value ==""){
-                    rows.show();
-                    return;
-                }
-                rows.hide();
-                rows.filter(function(i,v){
-                    var t = $(this);
-                    for (var d = 0; d < data.length; d++) {
-                        if (t.is(":Contains('" + data[d] + "')")) {
-                            return true;
-                        }
-                    }
-                    return false;
-                }).show();
-            });
-        });
-
-        function addNewRow() {
-            var table = $('.patientInfo');
-            var label = '<tr>' +
-                    '<td><input type = "checkbox" id="selectPatient"></td>' +
-                    ' <td>{Name}</td> ' +
-                    ' <td>{Hospital Number}</td> ' +
-                    ' <td>{Date of birth}</td>' +
-                    '<td><a href ="#"><i class = "fa fa-pencil"></i></a></td>' +
-                    '</tr>';
-
-            var dataAppend = label;
-
-            $('div [class = "fillData"] input:text').each(function () {
-                switch (this.id) {
-                    case 'patientName':
-                        dataAppend = dataAppend.replace('{Name}', this.value);
-                        break;
-                    case 'hospitalNum':
-                        dataAppend = dataAppend.replace('{Hospital Number}', this.value);
-                        break;
-                    case 'DOB':
-                        dataAppend = dataAppend.replace('{Date of birth}', this.value);
-                        break;
-                }
-            })
-
-            table.append(dataAppend);
-        }
-
-
-        </script>
+    <script type=text/javascript src="/js/jquery-1.9.1.js"></script>
+    <script type=text/javascript src="/js/jquery-ui.js"></script>
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -125,7 +56,8 @@
         <!-- Top Menu Items -->
         <ul class="nav navbar-right top-nav">
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b
+                        class="caret"></b></a>
                 <ul class="dropdown-menu message-dropdown">
                     <li class="message-preview">
                         <a href="#">
@@ -133,10 +65,13 @@
                                     <span class="pull-left">
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
+
                                 <div class="media-body">
                                     <h5 class="media-heading"><strong>USERNAME</strong>
                                     </h5>
+
                                     <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
+
                                     <p>Lorem ipsum dolor sit amet, consectetur...</p>
                                 </div>
                             </div>
@@ -148,10 +83,13 @@
                                     <span class="pull-left">
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
+
                                 <div class="media-body">
                                     <h5 class="media-heading"><strong>USERNAME</strong>
                                     </h5>
+
                                     <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
+
                                     <p>Lorem ipsum dolor sit amet, consectetur...</p>
                                 </div>
                             </div>
@@ -163,10 +101,13 @@
                                     <span class="pull-left">
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
+
                                 <div class="media-body">
                                     <h5 class="media-heading"><strong>USERNAME</strong>
                                     </h5>
+
                                     <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
+
                                     <p>Lorem ipsum dolor sit amet, consectetur...</p>
                                 </div>
                             </div>
@@ -178,7 +119,8 @@
                 </ul>
             </li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b
+                        class="caret"></b></a>
                 <ul class="dropdown-menu alert-dropdown">
                     <li>
                         <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a>
@@ -205,7 +147,8 @@
                 </ul>
             </li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> USERNAME <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> USERNAME <b
+                        class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li>
                         <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
@@ -251,7 +194,8 @@
                     <a href="Therapies.html"><i class="fa fa-fw fa-pencil-square-o"></i> Therapies</a>
                 </li>
                 <li>
-                    <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-cog"></i> Users <i class="fa fa-fw fa-caret-down"></i></a>
+                    <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-cog"></i>
+                        Users <i class="fa fa-fw fa-caret-down"></i></a>
                     <ul id="demo" class="collapse">
                         <li>
                             <a href="activity.html"><i class="fa fa-fw fa-list"></i> Activity Log</a>
@@ -276,48 +220,120 @@
                 <div class="col-lg-12">
                     <h1 class="page-header">Patients</h1>
 
-
-                    <div class = "patientData">
-                        <div class ="searchBar">
-                            <input type = "search" name = "searchPatient" id = "searchPatient">
-                            <a href="#"> <i class = "fa fa-search"></i></a>
-                            <button id = "deletePatients" class = "btn-lg">Delete Selected Patients</button>
+                    <div class="panel" id="patientData">
+                        <div class="panel heading" id="searchBar">
+                            <input type="search" name="searchPatient" id="searchPatient" placeholder="search patient">
                         </div>
 
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12">
+                                <table class=" table table-bordered table-hover" id="patientInfo">
+                                    <thead>
+                                    <tr>
+                                        <td class="col-lg-1 text-center"><b>Select</b></td>
+                                        <td class="col-lg-1 text-center"><b>Patient ID:</b></td>
+                                        <td class="col-lg-3 text-center"><b>Patient Name:</b></td>
+                                        <td class="col-lg-2 text-center"><b>Hospital Number:</b></td>
+                                        <td class="col-lg-2 text-center"><b>Date of birth:</b></td>
+                                        <td class="col-lg-2 text-center"><b>Edit</b></td>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
 
-                    <table style ="width:95%" class = "patientInfo">
-                        <thead>
-                        <tr>
-                            <th>Select </th>
-                            <th>Patient Name</th>
-                            <th>Hospital Number</th>
-                            <th>Date of Birth</th>
-                        </tr>
-                        </thead>
-                    </table>
-                    </div>
 
-                    <div class = "addPatient">
-                        <h2 id = "title">Add Patient</h2>
+                                    #[collection: patients]
+                                    #[pre]#[/pre]
 
+                                    #[each]
+                                    <tr>
+                                        <td><input type="checkbox" id="selectPatient"></td>
+                                        <td>#id</td>
+                                        <td>#name</td>
+                                        <td>#hospitalNumber</td>
+                                        <td>#dateOfBirth</td>
+                                        <td>
+                                            <button class="btn edit-button" data-id="#id">Edit</button>
+                                        </td>
+                                    </tr>
 
-                            <div class = "fillData">
-                                   <label for= "patientName" >Name:</label>
-                                    <input id = "patientName" name = "patientName" type = "text" value = "">
-                             </div>
-                            <div class="fillData">
-                                    <label for = "hospitalNum">Hospital Number:</label>
-                                    <input id = "hospitalNum" name = "hospitalNum" type = "text" value = "">
+                                    #[/each]
+
+                                    #[post]#[/post]
+
+                                    #[empty]
+                                    <tr>
+                                        <td colspan="6">No Patients</td>
+                                    </tr>
+                                    #[/empty]
+                                    #[/collection]
+                                    </tbody>
+                                </table>
+                                <button id = "deletePatients" class="btn-lg">Delete Selected Patients</button>
                             </div>
-                            <div class="fillData">
-                                    <label for = "DOB">Date of birth:</label>
-                                    <input type="text" id = "DOB">
-                             </div>
-                        <button id = "addNew" class = "btn-lg">Add</button>
+                        </div>
+
+                        <div class="modal hide fade edit-modal">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h3 class="edit-mode">Edit Patient</h3>
+
+                                        <h3 class="create-mode">Create Patient</h3>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form class="edit-form">
+                                            <input type="hidden" name="entity-type" value="patient"/>
+                                            <input type="hidden" name="entity-id" value="0"/>
+
+                                            <div class="form-group">
+                                                <label for="name">Name</label>
+                                                <input type="text" name="name" id="name"/>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="username">Username</label>
+                                                <input type="text" name="username" id="username"/>
+                                            </div>
+                                            <div class="form-group create-mode">
+                                                <label for="password">Password</label>
+                                                <input type="password" name="password" id="password"/>
+                                            </div>
+                                            <div class="form-group create-mode">
+                                                <label for="password_check">Repeat Password</label>
+                                                <input type="password" name="password_check" id="password_check"/>
+                                            </div>
+                                            <div class="form-group edit-mode">
+                                                <p class="small">
+                                                    <em>Note: you can only edit your own password, by checking 'Account
+                                                        Settings'.</em></p>
+                                            </div>
+                                            <!-- TODO: staff role drop-down -->
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-cancel">Cancel</button>
+                                        <button type="button" class="btn btn-primary btn-save">Ok</button>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </div>
                     </div>
+
+
                 </div>
             </div>
-           </div>
         </div>
     </div>
+    </div>
+    #[def: entity-name-title = patient]
+    #[def: entity-name-body = patient]
+    #[def: entity-type = patient]
+    ##_delete-modal.html
+    ##_loading-modal.html
+    #[collectionmap: objectMap: patients]
+    #[def: crud = yes]
+    <script src="/js/patients.js"></script>
+    ##_footer.html
+
 </body>
