--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -230,12 +230,12 @@
                                 <table class=" table table-bordered table-hover" id="patientInfo">
                                     <thead>
                                     <tr>
-                                        <td class="col-lg-1 text-center"><b>Select</b></td>
                                         <td class="col-lg-1 text-center"><b>Patient ID:</b></td>
                                         <td class="col-lg-3 text-center"><b>Patient Name:</b></td>
                                         <td class="col-lg-2 text-center"><b>Hospital Number:</b></td>
                                         <td class="col-lg-2 text-center"><b>Date of birth:</b></td>
                                         <td class="col-lg-2 text-center"><b>Edit</b></td>
+                                        <td class="col-lg-2 text-center"><b>Delete</b></td>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -246,13 +246,13 @@
 
                                     #[each]
                                     <tr>
-                                        <td><input type="checkbox" id="selectPatient"></td>
                                         <td>#id</td>
                                         <td>#name</td>
                                         <td>#hospitalNumber</td>
                                         <td>#dateOfBirth</td>
                                         <td>
                                             <button class="btn edit-button" data-id="#id">Edit</button>
+                                            <button class="btn delete-button" data-id="#id">Delete</button>
                                         </td>
                                     </tr>
 
@@ -268,7 +268,13 @@
                                     #[/collection]
                                     </tbody>
                                 </table>
-                                <button id = "deletePatients" class="btn-lg">Delete Selected Patients</button>
+                                <div class="text-right">
+                                    <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>
+                                        &nbsp;Add
+                                        Patient
+                                    </button>
+                                </div>
+
                             </div>
                         </div>
 
@@ -281,32 +287,26 @@
                                         <h3 class="create-mode">Create Patient</h3>
                                     </div>
                                     <div class="modal-body">
-                                        <form class="edit-form">
+                                        <form class="edit-form form-inline text-center">
                                             <input type="hidden" name="entity-type" value="patient"/>
                                             <input type="hidden" name="entity-id" value="0"/>
 
-                                            <div class="form-group">
-                                                <label for="name">Name</label>
+                                            <div class="form-group text-center">
+                                                <label for="id">Patient ID:</label>
+                                                <input type="text" name="id" id="id"/>
+                                            </div>
+                                            <div class="form-group text-center">
+                                                <label for="name">Name:</label>
                                                 <input type="text" name="name" id="name"/>
                                             </div>
-                                            <div class="form-group">
-                                                <label for="username">Username</label>
-                                                <input type="text" name="username" id="username"/>
+                                            <div class="form-group text-center">
+                                                <label for="hospitalNumber">Hospital Number:</label>
+                                                <input type="text" name="hospitalNumber" id="hospitalNumber"/>
                                             </div>
-                                            <div class="form-group create-mode">
-                                                <label for="password">Password</label>
-                                                <input type="password" name="password" id="password"/>
+                                            <div class="form-group text-center">
+                                                <label for="dateOfBirth">Date of Birth:</label>
+                                                <input type="text" name="dateOfBirth" id="dateOfBirth"/>
                                             </div>
-                                            <div class="form-group create-mode">
-                                                <label for="password_check">Repeat Password</label>
-                                                <input type="password" name="password_check" id="password_check"/>
-                                            </div>
-                                            <div class="form-group edit-mode">
-                                                <p class="small">
-                                                    <em>Note: you can only edit your own password, by checking 'Account
-                                                        Settings'.</em></p>
-                                            </div>
-                                            <!-- TODO: staff role drop-down -->
                                         </form>
                                     </div>
                                     <div class="modal-footer">
@@ -325,15 +325,15 @@
             </div>
         </div>
     </div>
-    </div>
-    #[def: entity-name-title = patient]
-    #[def: entity-name-body = patient]
-    #[def: entity-type = patient]
-    ##_delete-modal.html
-    ##_loading-modal.html
-    #[collectionmap: objectMap: patients]
-    #[def: crud = yes]
-    <script src="/js/patients.js"></script>
-    ##_footer.html
+</div>
+#[def: entity-name-title = Patient]
+#[def: entity-name-body = patient]
+#[def: entity-type = patient]
+##_delete-modal.html
+##_loading-modal.html
+#[collectionmap: objectMap: patients]
+#[def: crud = yes]
+<script src="/js/patients.js"></script>
+##_footer.html
 
 </body>
