Minor changes to column names

--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -230,12 +230,11 @@
                                 <table class=" table table-bordered table-hover" id="patientInfo">
                                     <thead>
                                     <tr>
-                                        <td class="col-lg-1 text-center"><b>Patient ID:</b></td>
-                                        <td class="col-lg-3 text-center"><b>Patient Name:</b></td>
-                                        <td class="col-lg-2 text-center"><b>Hospital Number:</b></td>
-                                        <td class="col-lg-2 text-center"><b>Date of birth:</b></td>
-                                        <td class="col-lg-2 text-center"><b>Edit</b></td>
-                                        <td class="col-lg-2 text-center"><b>Delete</b></td>
+                                        <td class="col-lg-1 text-center"><b>Patient ID</b></td>
+                                        <td class="col-lg-3 text-center"><b>Patient Name</b></td>
+                                        <td class="col-lg-2 text-center"><b>Hospital Number</b></td>
+                                        <td class="col-lg-2 text-center"><b>Date of birth</b></td>
+                                        <td class="col-lg-2 text-center"><b>Action</b></td>
                                     </tr>
                                     </thead>
                                     <tbody>
