--- a/src/main/resources/static/cameras.html
+++ b/src/main/resources/static/cameras.html
@@ -220,123 +220,98 @@
                 </div>
             </div>
             <!-- /.row -->
-
             <div class="row">
                 <div class="col-lg-12 col-md-12">
                     <table class="table table-bordered table-hover">
                         <thead>
                         <tr>
-                            <th class="col-lg-3 text-center">Name of camera</th>
-                            <th class="col-lg-4 text-center">Description</th>
-                            <th class="col-lg-4 text-center">Facilities</th>
-                            <th class="col-lg-1 text-center">Action</th>
+                            <td class="col-lg-1 text-center"><b>ID</b></td>
+                            <td class="col-lg-3 text-center"><b>Camera Type</b></td>
+                            <td class="col-lg-2 text-center"><b>Room Number</b></td>
+                            <td class="col-lg-1 text-center"><b>Action</b></td>
                         </tr>
                         </thead>
-                        <tbody id="tableBodyCameras">
-                        <tr id="TRBathroom">
-                            <th id="THBathroomName" class="text-center" style="vertical-align: middle">Bathroom</th>
-                            <th id="THBathroomDescription" class="text-center" style="vertical-align: middle">A must
-                                have in your house.
-                            </th>
-                            <th id="THBathroomFacilities" class="text-center" style="vertical-align: middle">Will see about this. Maybe check boxes for user to select therapies in this room
-                            </th>
-                            <th id="THBathroomEdit" class="text-center" style="vertical-align: middle"><u
-                                    id="uBathroomEdit" class="fa fa-pencil-square-o" style="cursor:pointer;"
-                                    onmouseover="this.style.color='#2f2f8b';"
-                                    onmouseout="this.style.color='';" onclick="editCamera(id)">
-                                &nbsp;Edit</u></th>
+
+                        <tbody>
+                        #[collection: cameras]
+
+                        #[pre]#[/pre]
+
+                        #[each]
+                        <tr>
+                            <td>#id</td>
+                            <td>#type</td>
+                            <td>#roomNumber</td>
+                            <td>
+                                <button class="btn edit-button" data-id="#id">Edit</button>
+                                <button class="btn delete-button" data-id="#id">Delete</button>
+                            </td>
                         </tr>
+                        #[/each]
+
+                        #[post]#[/post]
+
+                        #[empty]
+                        <tr>
+                            <td class="text-center" colspan="4"><b><u>No cameras.</u></b></td>
+                        </tr>
+                        #[/empty]
+                        #[/collection]
                         </tbody>
                     </table>
-                    <div class="text-right">
 
-                        <label id="mata"
-                               style="cursor:pointer;"
-                               onmouseover="this.style.color='#2f2f8b';"
-                               onmouseout="this.style.color='';"
-                               onclick="emptyModalFields()"> <i class="fa fa-plus-circle"></i> &nbsp;Add new
-                            Camera</label>
+                    <div class="text-right">
+                        <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i> &nbsp;Add
+                            camera
+                        </button>
                     </div>
                 </div>
             </div>
             <!-- /.row -->
         </div>
-        <!-- /.container-fluid -->
-        <!-- Start Modal for adding a new camera, asking the user for data -->
-        <div class="modal fade" id="bs-example-modal-sm-add-new-camera">
+        <!-- /.row -->
+        <div class="modal hide fade edit-modal">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                aria-hidden="true">&times;</span></button>
-                        <h3 class="modal-title text-center">Add a new camera<h5 class="text-center" style="opacity: 0.4;">Please complete the
-                            following fields.</h5></h3>
-                    </div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="nameOfCameraInput" class="control-label">Name:</label>
-                                <input type="text" class="form-control" id="nameOfCameraInput" placeholder="Name of the camera">
-                            </div>
-                            <div class="form-group">
-                                <label for="descriptionOfCameraInput" class="control-label">Description:</label>
-                                <textarea class="form-control" id="descriptionOfCameraInput" placeholder="Description"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <label for="facilitiesOfCameraInput" class="control-label">Facilities:</label>
-                                <input type="text" class="form-control" id="facilitiesOfCameraInput" placeholder="Facilities provided">
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button id="saveCameraButton" type="button" class="btn btn-primary" disabled
-                                onclick="addNewCamera()">Add camera
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- END/Modal for adding a new camera, asking the user for data -->
+                        <h3 class="edit-mode">Edit Camera</h3>
 
-        <!-- START Modal for editing a camera, asking the user for data -->
-        <div class="modal fade" id="bs-example-modal-sm-edit-camera">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title text-center" id="headEditCamera">Edit camera</h4>
+                        <h3 class="create-mode text-center">Create new Camera</h3>
                     </div>
                     <div class="modal-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="editNameOfCameraInput" class="control-label">Name:</label>
-                                <input type="text" class="form-control" id="editNameOfCameraInput">
+                        <form class="edit-form form-inline text-center">
+                            <input type="hidden" name="entity-type" value="camera"/>
+                            <input type="hidden" name="entity-id" value="0"/>
+
+                            <div class="form-group text-center">
+                                <label for="type">Type: </label>
+                                <input class="form-control input-lg" type="text" name="name" id="type"/>
                             </div>
-                            <div class="form-group">
-                                <label for="editDescriptionOfCameraInput" class="control-label">Description:</label>
-                                <textarea class="form-control" id="editDescriptionOfCameraInput"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <label for="editFacilitiesOfCameraInput" class="control-label">Facilities:</label>
-                                <input type="text" class="form-control" id="editFacilitiesOfCameraInput">
+                            <div class="form-group text-center">
+                                <label for="roomNumber">Room Number: </label>
+                                <input class="form-control input-lg" type="text" name="name" id="roomNumber"/>
                             </div>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button id="editSaveCameraButton" type="button" class="btn btn-primary" name="Bathroom"
-                                onclick="editSaveCamera()">Save Changes
-                        </button>
-                        <button id="editDeleteCameraButton" type="button" class="btn btn-danger" name="Bathroom"
-                                onclick="editDeleteCamera(name)">Delete Camera
-                        </button>
+                        <button type="button" class="btn btn-cancel">Cancel</button>
+                        <button type="button" class="btn btn-primary btn-save">Ok</button>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- END/Modal for editing a camera, asking the user for data -->
+
+        #[def: entity-name-title = Camera]
+        #[def: entity-name-body = camera]
+        #[def: entity-type = camera]
+
+        ##_delete-modal.html
+        ##_loading-modal.html
+
+        #[collectionmap: objectMap: cameras]
+        #[def: crud = yes]
+        ##_footer.html
+
     </div>
     <!-- /#page-wrapper -->
 
